[package]
name = "anvil-core"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
foundry-common.workspace = true
foundry-evm.workspace = true
revm = { workspace = true, default-features = false, features = [
    "std",
    "serde",
    "memory_limit",
    "c-kzg",
] }

alloy-primitives = { workspace = true, features = ["serde"] }
alloy-rpc-types = { workspace = true, features = ["anvil", "trace"] }
alloy-serde.workspace = true
alloy-rlp.workspace = true
alloy-eips.workspace = true
alloy-consensus = { workspace = true, features = ["k256", "kzg"] }
alloy-dyn-abi = { workspace = true, features = ["std", "eip712"] }
alloy-trie.workspace = true

serde = { workspace = true, optional = true }
serde_json.workspace = true
bytes = "1.4"

# misc
rand = "0.8"

[features]
default = ["serde"]
impersonated-tx = []
serde = ["dep:serde"]

[dependencies.pyo3]
version = "0.21.1"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38", "extension-module"]

[profile.release]
opt-level = 3
strip = false
debug = true
codegen-units = 1
lto = true